[tool.poetry]
name = "section7"
version = "0.1.0"
description = ""
authors = ["Pablo Diaz <pabloandi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
flask_restful = "^0.3.8"
flask-jwt = "^0.3.2"
flask-sqlalchemy = "^2.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
